@@ -219,6 +219,10 @@ Print a list of options with short descriptions and exit.
 Print the program version and exit.
 .LP
 .TP
+\fB\-\-echo-args\fP
+Print the POPT-interpreted command line arguments and exit.
+.LP
+.TP
 \fB\-v\fP [\fB+\fP|\fB\-\fP]\fIN\fP, \
 \fB\-\-volume\fP [\fB+\fP|\fB\-\fP]\fIN\fP
 Adjust the mixer volume.  You can set (\fB\-v 50\fP) or adjust
