@@ -26,6 +26,8 @@
 	  - Introduced in-memory circular logging buffer
 	  - Introduced MOCP_POPTRC environment variable
 	  - Introduced MOCP_OPTS environment variable
+	* New and changed command line options:
+	  - echo-args: Show POPT-interpreted command line arguments
 	* Changes to supported formats and codecs:
 	  - VQF: now supported via FFmpeg/LibAV
 
